Fixed latest-message column vertical alignment

--- a/css/main.less
+++ b/css/main.less
@@ -713,13 +713,11 @@ html {
         }
     }
 
-    .latest-message {
+    .latest-message > div {
         width: @latest-message-in-table-width;
         overflow-x: hidden;
-        display: block;
         text-overflow: ellipsis;
         font-size: 0.875rem;
-
         &:not(:last-child) {
             border-bottom: solid 1px #E5E5E5;
             margin-bottom: 10px;
@@ -851,10 +849,9 @@ html {
         }
     }
 
-    .latest-message {
+    .latest-message > div {
         width: @latest-message-in-table-width;
         overflow-x: hidden;
-        display: block;
         text-overflow: ellipsis;
         font-size: 0.875rem;
 
@@ -1003,10 +1000,9 @@ html {
         }
     }
 
-    .latest-message {
+    .latest-message > div {
         width: 1.5*@latest-message-in-table-width;
         overflow-x: hidden;
-        display: block;
         text-overflow: ellipsis;
         font-size: 0.875rem;
 
